--- a/client/package.json
+++ b/client/package.json
@@ -11,40 +11,39 @@
     "start": "REDUX_LOGGER=true craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "lint": "npx prettier --write ."
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "antd": "^4.7.2",
-    "dayjs": "^1.9.3",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "antd": "^4.7.3",
+    "dayjs": "^1.9.4",
     "default-passive-events": "^2.0.0",
     "es6-promise": "^4.2.8",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-redux": "^7.2.1",
-    "react-refresh": "^0.8.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.3.2",
     "url-search-params-polyfill": "^8.1.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@craco/craco": "^5.7.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "babel-cli": "^6.26.0",
     "babel-plugin-import": "^1.13.1",
     "craco-less": "^1.17.0",
-    "react-scripts": "^3.4.3",
+    "prettier": "^2.1.2",
+    "react-scripts": "^4.0.0",
     "source-map-explorer": "^2.5.0"
   },
   "browserslist": [
